src/test/deca/context/valid/provided/ContextSansObjet/OperationsArithmetiques/MinusFloatFloat.deca
//Description :
//	Vérification contextuelle de l'opérateur - avec des variables float
//
//Résultats :
//	ok

{
    float x = 1.0-1.1;
    float y = 3.3;
    float z = x-y;
}